@@ -51,18 +51,18 @@
 static unsigned int global_id = 0;
 
 
-struct log_file_s {
+struct log_source_s {
         
         unsigned int id;
-        char *filename;
         
+        char *name;
         char *ts_fmt;
         char *log_fmt;
 };
 
 
 
-static int format_tstamp(log_file_t *lf, const char *log, char delim, void **out) 
+static int format_tstamp(log_source_t *ls, const char *log, char delim, void **out) 
 {
         time_t now;
         struct tm *lt;
@@ -86,7 +86,7 @@ static int format_tstamp(log_file_t *lf, const char *log, char delim, void **out
          * strptime() return a pointer to the first non matched character.
          */
         
-        end = strptime(log, lf->ts_fmt, lt);
+        end = strptime(log, ls->ts_fmt, lt);
         if ( ! end ) 
                 goto err;
 
@@ -105,14 +105,14 @@ static int format_tstamp(log_file_t *lf, const char *log, char delim, void **out
         return end - log;
 
  err:
-        log(LOG_ERR, "couldn't format \"%s\" using \"%s\".\n", log, lf->ts_fmt);
+        log(LOG_ERR, "couldn't format \"%s\" using \"%s\".\n", log, ls->ts_fmt);
         return -1;
 }
 
 
 
 
-static int format_common(log_file_t *lf, const char *log, char delim, void **out) 
+static int format_common(log_source_t *ls, const char *log, char delim, void **out) 
 {
         char *ptr, tmp;
                 
@@ -137,13 +137,13 @@ static int format_common(log_file_t *lf, const char *log, char delim, void **out
 
 
 
-static int handle_escaped(log_file_t *lf, log_container_t *lc, const char *fmt, const char **log)
+static int handle_escaped(log_container_t *lc, const char *fmt, const char **log)
 {
         int i, ret, len;
         void *tv = &lc->tv;
         struct {
                 const char *name;
-                int (*cb)(log_file_t *lf, const char *log, char delim, void **out);
+                int (*cb)(log_source_t *ls, const char *log, char delim, void **out);
                 void **ptr;
         } tbl[] = {
                 { "tprog", format_common, (void **) &lc->target_program  },
@@ -160,7 +160,7 @@ static int handle_escaped(log_file_t *lf, log_container_t *lc, const char *fmt, 
                 if ( ret != 0 )
                         continue;
 
-                ret = tbl[i].cb(lf, *log, fmt[len], tbl[i].ptr);
+                ret = tbl[i].cb(lc->source, *log, fmt[len], tbl[i].ptr);
                 if ( ret < 0 )
                         return -1;
                 
@@ -177,15 +177,15 @@ static int handle_escaped(log_file_t *lf, log_container_t *lc, const char *fmt, 
 
 
 
-static int format_header(log_file_t *lf, log_container_t *lc, const char *log)
+static int format_header(log_container_t *lc, const char *log)
 {
         int ret = 0;
-        const char *fmt = lf->log_fmt;
+        const char *fmt = lc->source->log_fmt;
         
         while ( *fmt ) {
                 
                 if ( *fmt == '%' && ((*fmt + 1) != '%' || *(fmt + 1) != '\0') ) {
-                        ret = handle_escaped(lf, lc, fmt + 1, &log);
+                        ret = handle_escaped(lc, fmt + 1, &log);
                         if ( ret < 0 )
                                 return -1;
 
@@ -209,12 +209,12 @@ static int format_header(log_file_t *lf, log_container_t *lc, const char *log)
 
 
 
-static int format_log(log_file_t *lf, log_container_t *lc)
+static int format_log(log_container_t *lc)
 {
         int ret;
         char *log = lc->log;
 
-        ret = format_header(lf, lc, log);
+        ret = format_header(lc, log);
         /*
          * don't return on error, a syslog header might not have a tag.
          */
@@ -240,7 +240,7 @@ static char *get_hostname(void)
 
 
 
-log_container_t *log_container_new(void)
+log_container_t *log_container_new(log_source_t *source)
 {
         log_container_t *lc;
 
@@ -250,6 +250,7 @@ log_container_t *log_container_new(void)
                 return NULL;
         }
 
+        lc->source = source;
         gettimeofday(&lc->tv, NULL);
 
         /*
@@ -263,7 +264,7 @@ log_container_t *log_container_new(void)
 
 
 
-int log_container_set_log(log_file_t *lf, log_container_t *lc, const char *entry) 
+int log_container_set_log(log_container_t *lc, const char *entry) 
 {
         int ret;
         
@@ -272,27 +273,13 @@ int log_container_set_log(log_file_t *lf, log_container_t *lc, const char *entry
                 log(LOG_ERR, "memory exhausted.\n");
                 return -1;
         }
-                
-        ret = format_log(lf, lc);
+
+        ret = format_log(lc);
         if ( ret < 0 ) {
                 gettimeofday(&lc->tv, NULL);
                 return 0;
         }
                 
-        return 0;
-}
-
-
-
-
-int log_container_set_source(log_container_t *log, const char *source) 
-{
-        log->source = strdup(source);
-        if ( ! log->source ) {
-                log(LOG_ERR, "memory exhausted.\n");
-                return -1;
-        }
-
         return 0;
 }
 
@@ -309,9 +296,6 @@ void log_container_delete(log_container_t *lc)
 
         if ( lc->target_user )
                 free(lc->target_user);
-        
-        if ( lc->source )
-                free(lc->source);
 
         if ( lc->log )
                 free(lc->log);
@@ -322,82 +306,54 @@ void log_container_delete(log_container_t *lc)
 
 
 
-int log_file_set_source(log_file_t *lf, const char *source) 
+int log_source_set_name(log_source_t *ls, const char *name) 
 {
-        if ( lf->filename )
-                free(lf->filename);
+        if ( ls->name )
+                free(ls->name);
         
-        lf->filename = strdup(source);
-        if ( ! lf->filename ) {
+        ls->name = strdup(name);
+        if ( ! ls->name ) {
                 log(LOG_ERR, "memory exhausted.\n");
                 return -1;
         }
 
-        lf->id = global_id++;
+        ls->id = global_id++;
         
         return 0;
 }
 
 
 
-
-int log_file_set_filename(log_file_t *lf, const char *filename) 
+log_source_t *log_source_new(void)
 {
-        int ret;
+        log_source_t *new;
         
-        ret = access(filename, R_OK);
-        if ( ret < 0 ) {
-                log(LOG_ERR, "%s does not exist or have wrong permissions: check your configuration.\n", filename);
-                return -1;
-        }
-
-        if ( lf->filename )
-                free(lf->filename);
-        
-        lf->filename = strdup(filename);
-        if ( ! lf->filename ) {
-                log(LOG_ERR, "memory exhausted.\n");
-                return -1;
-        }
-
-        lf->id = global_id++;
-        
-        return 0;
-}
-
-
-
-
-log_file_t *log_file_new(void)
-{
-        log_file_t *lf;
-        
-        lf = calloc(1, sizeof(*lf));
-        if ( ! lf ) {
+        new = calloc(1, sizeof(*new));
+        if ( ! new ) {
                 log(LOG_ERR, "memory exhausted.\n");
                 return NULL;
         }
 
-        lf->ts_fmt = SYSLOG_TS_FMT;
-        lf->log_fmt = SYSLOG_LOG_FMT;
+        new->ts_fmt = SYSLOG_TS_FMT;
+        new->log_fmt = SYSLOG_LOG_FMT;
         
-        return lf;
+        return new;
 }
 
 
 
 
-const char *log_file_get_filename(log_file_t *lf)
+const char *log_source_get_name(log_source_t *ls)
 {        
-        return lf->filename;
+        return ls->name;
 }
 
 
 
-int log_file_set_log_fmt(log_file_t *lf, const char *fmt)
+int log_source_set_log_fmt(log_source_t *ls, const char *fmt)
 {        
-        lf->log_fmt = strdup(fmt);
-        if ( ! lf->log_fmt ) {
+        ls->log_fmt = strdup(fmt);
+        if ( ! ls->log_fmt ) {
                 log(LOG_ERR, "memory exhausted.\n");
                 return -1;
         }
@@ -408,10 +364,10 @@ int log_file_set_log_fmt(log_file_t *lf, const char *fmt)
 
 
 
-int log_file_set_timestamp_fmt(log_file_t *lf, const char *fmt)
+int log_source_set_timestamp_fmt(log_source_t *ls, const char *fmt)
 {        
-        lf->ts_fmt = strdup(fmt);
-        if ( ! lf->ts_fmt ) {
+        ls->ts_fmt = strdup(fmt);
+        if ( ! ls->ts_fmt ) {
                 log(LOG_ERR, "memory exhausted.\n");
                 return -1;
         }
